--- a/INSTALL
+++ b/INSTALL
@@ -199,7 +199,7 @@ These instructions assume your PHP installation is located in /usr/local/php.
                             (Default: 0)
 
     apc.preload_path        Sets the path to text files containing caches to load
-                            from disk upon intiialization of APCu.
+                            from disk upon initialization of APCu.
                             preload_path should be a directory where each file follows
 								$key.data
                             where $key should be used as the entry name and the contents
@@ -256,7 +256,7 @@ These instructions assume your PHP installation is located in /usr/local/php.
 
     apc.mmap_file_mask      If compiled with MMAP support by using --enable-mmap
                             this is the mktemp-style file_mask to pass to the
-                            mmap module for determing whether your mmap'ed memory
+                            mmap module for determining whether your mmap'ed memory
                             region is going to be file-backed or shared memory
                             backed.  For straight file-backed mmap, set it to
                             something like /tmp/apc.XXXXXX (exactly 6 X's).
@@ -277,7 +277,7 @@ These instructions assume your PHP installation is located in /usr/local/php.
 							was set by another process or thread )
 							Note:
 								APCu does not store enough information to 
-								catch every occurence, sufficient none the less.
+								catch every occurrence, sufficient none the less.
                             (Default: 1)
 
     apc.serializer			Defines which serializer should be used. Default is the 
